--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -46,16 +46,16 @@
         <!-- Navigation -->
         <nav id="mainNav" class="nav font-body font-semibold text-base text-white w-full md:w-auto md:ml-auto hidden md:block">
             <ul class="flex flex-col md:flex-row items-center gap-2 md:gap-4 whitespace-nowrap">
-                <li class="w-full md:w-auto p-1 border-b-2 border-customDarkGreen border-opacity-0 hover:border-opacity-100 hover:text-customDarkGreen duration-200 cursor-pointer active">
+                <li class="w-full md:w-auto p-1 border-b-2 border-customDarkGreen border-opacity-0 hover:border-opacity-100 hover:text-customDarkGreen duration-200 cursor-pointer {% if request.path == '/' %}border-opacity-100 text-customDarkGreen{% endif %}">
                     <a href="{% url 'home' %}" class="block w-full text-center md:text-left">Inicio</a>
                 </li>
-                <li class="w-full md:w-auto p-1 border-b-2 border-customDarkGreen border-opacity-0 hover:border-opacity-100 hover:text-customDarkGreen duration-200 cursor-pointer">
+                <li class="w-full md:w-auto p-1 border-b-2 border-customDarkGreen border-opacity-0 hover:border-opacity-100 hover:text-customDarkGreen duration-200 cursor-pointer {% if '/municipalities' in request.path %}border-opacity-100 text-customDarkGreen{% endif %}">
                     <a href="{% url 'municipality_name_list' %}" class="block w-full text-center md:text-left">Municipios</a>
                 </li>
-                <li class="w-full md:w-auto p-1 border-b-2 border-customDarkGreen border-opacity-0 hover:border-opacity-100 hover:text-customDarkGreen duration-200 cursor-pointer">
+                <li class="w-full md:w-auto p-1 border-b-2 border-customDarkGreen border-opacity-0 hover:border-opacity-100 hover:text-customDarkGreen duration-200 cursor-pointer {% if 'experienc' in request.path %}border-opacity-100 text-customDarkGreen{% endif %}">
                     <a href="{% url 'experience_search_page' %}" class="block w-full text-center md:text-left">Buscar Experiencias</a>
                 </li>
-                <li class="w-full md:w-auto p-1 hover:text-gray-200 duration-200 cursor-pointer">
+                <li class="w-full md:w-auto p-1 border-b-2 border-customDarkGreen border-opacity-0 hover:border-opacity-100 hover:text-customDarkGreen duration-200 cursor-pointer {% if '/traveler' in request.path %}border-opacity-100 text-customDarkGreen{% endif %}">
                     <a href="{% url 'traveler_post_list' %}" class="block w-full text-center md:text-left">De viajero a viajero</a>
                 </li>
             </ul>
